Fixed some formatting

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -1262,7 +1262,7 @@
     "\n",
     "fare_jan_to_april_weeks_df.plot(figsize=(15,5))\n",
     "plt.xlabel(\"Date\")\n",
-    "plt.ylabel(\"Fare\")\n",
+    "plt.ylabel(\"Fare ($US)\")\n",
     "plt.title(\"Total Fare by City Type from January to April 2019\")\n",
     "plt.savefig(\"./Resources/Pyber_fare_summary.png\")"
    ]
